# dashi-server

./: .dockerignore  .env.example  .gitignore  COPYING  Cargo.toml  README.md  db.Dockerfile  db.compose.yaml  dev.Dockerfile  dev.compose.yaml  dev.sh  entity.compose.yaml  flake.nix  index.html  prod.Dockerfile  prod.compose.yaml  prod.sh  renovate.json  return.Dockerfile  return.compose.yaml  return.sh  schema.yaml  server.Dockerfile  server.compose.yaml  server.sh  start.sh
crates/domain/: Cargo.toml
crates/domain/src/: entity.rs  lib.rs  repository.rs
crates/domain/src/entity/: data_type.rs  discord.rs
crates/domain/src/entity/data_type/: color.rs  connector.rs  depreiation_csv.rs  generate.rs  generate_data_request.rs  image_item.rs  individual_item.rs  item_csv.rs  meilisearch_color.rs  meilisearch_connector.rs  meilisearch_item.rs  register_color.rs  register_connector.rs  register_item.rs  rental.rs  rental_item.rs  search_item.rs  status_connector.rs  transfer_item.rs  trash_item.rs  update_color.rs  update_item.rs
crates/domain/src/entity/discord/: json.rs  sender.rs
crates/domain/src/factory/: shared_state.rs
crates/domain/src/repository/: connection.rs  generate.rs  healthcheck.rs  item.rs
crates/domain/src/repository/color/: all_colors.rs  register.rs  search.rs  update.rs
crates/domain/src/repository/connector/: all_connectors.rs  register.rs  search.rs  status.rs
crates/domain/src/repository/csv/: depreiation.rs  item.rs
crates/domain/src/repository/item/: delete.rs  image.rs  individual.rs  register.rs  search.rs  transfer.rs  trash.rs  update.rs
crates/domain/src/repository/rental/: all_rental_items.rs  rent.rs  replace.rs  update.rs
crates/domain/src/value_object/: error.rs
crates/domain/src/value_object/error/: connection.rs  connector.rs  critical_incident.rs  discord.rs  generate.rs  healthcheck.rs  item.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: connection.rs  discord.rs  generate.rs  healthcheck.rs  item.rs  lib.rs  object_strage.rs  rental.rs  shared_state.rs
crates/infrastructure/src/color/: all_colors.rs  register.rs  search.rs  update.rs
crates/infrastructure/src/color/all_colors/: all_colors_module.rs
crates/infrastructure/src/color/register/: register_module.rs
crates/infrastructure/src/color/search/: search_module.rs
crates/infrastructure/src/color/update/: update_module.rs
crates/infrastructure/src/connection/: auth0.rs  discord.rs  graphdb.rs  meilisearch.rs  object_strage.rs  rdb.rs
crates/infrastructure/src/connector/: all_connectors.rs  register.rs  search.rs  status.rs
crates/infrastructure/src/connector/all_connectors/: all_connectors_module.rs
crates/infrastructure/src/connector/register/: register_module.rs
crates/infrastructure/src/connector/search/: search_module.rs
crates/infrastructure/src/connector/status/: status_module.rs
crates/infrastructure/src/csv/: depreiation.rs  item.rs
crates/infrastructure/src/csv/depreiation/: depreiation_module.rs
crates/infrastructure/src/csv/item/: item_module.rs
crates/infrastructure/src/discord/: item.rs  rental.rs
crates/infrastructure/src/generate/: generate_module.rs
crates/infrastructure/src/healthcheck/: graphdb.rs  meilisearch.rs  rdb.rs
crates/infrastructure/src/item/: delete.rs  image.rs  individual_item.rs  register.rs  search.rs  transfer.rs  trash.rs  update.rs
crates/infrastructure/src/item/delete/: delete_module.rs
crates/infrastructure/src/item/image/: image_module.rs
crates/infrastructure/src/item/individual_item/: individual_item_module.rs
crates/infrastructure/src/item/register/: register_module.rs
crates/infrastructure/src/item/search/: search_module.rs
crates/infrastructure/src/item/transfer/: transfer_module.rs
crates/infrastructure/src/item/trash/: trash_module.rs
crates/infrastructure/src/item/update/: update_module.rs
crates/infrastructure/src/object_strage/: r2.rs  webp.rs
crates/infrastructure/src/rental/: all_rental_items.rs  rent.rs  replace.rs  update.rs
crates/infrastructure/src/rental/all_rental_items/: all_rental_items_module.rs
crates/infrastructure/src/rental/rent/: rent_module.rs
crates/infrastructure/src/rental/replace/: replace_module.rs
crates/init/: Cargo.toml
crates/init/csv/: color.csv  connector.csv
crates/init/image/: COPYING.md
crates/init/src/: csv.rs  error.rs  initialize.rs  main.rs  migration.rs
crates/init/src/error/: csv.rs  init.rs  init_healthcheck.rs  initialize.rs  migration.rs
crates/ping/: Cargo.toml
crates/ping/src/: main.rs
crates/ping/src/error/: ping.rs
crates/presentation/: Cargo.toml
crates/presentation/src/: api.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs
crates/presentation/src/error/: api.rs
crates/presentation/src/handlers/: color.rs  connector.rs  csv.rs  item.rs  joke.rs  ping.rs  rental.rs  utils.rs
crates/presentation/src/middlewares/: logging.rs
crates/presentation/src/models/: image_item_multipart.rs  register_item_multipart_data.rs  rwlock_shared_state.rs
crates/presentation/src/multipart/: item.rs
crates/presentation/src/routes/: color.rs  connector.rs  csv.rs  item.rs  joke.rs  rental.rs  root.rs  util.rs
crates/presentation/src/utils/: jwt.rs
entity/: Cargo.toml
entity/src/: active_enum.rs  color.rs  connector.rs  item.rs  label.rs  mod.rs  prelude.rs  trash.rs
migration/: Cargo.toml
(+76 files in other folders)
