# #* create entity *#
# [package]
# name = "dashi-server"
# version = "0.0.1"
# edition = "2021"

# [dependencies]
# #sea-orm
# migration = { path = "migration" }
# sea-orm = { version = "1.0.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }

#* create migration, run init and presentation *#
[workspace]
resolver = "2"
members = [
    "crates/init",
    "crates/ping",
    "crates/presentation",
    "crates/application",
    "crates/domain",
    "crates/infrastructure",
    "migration",
    "entity",
]

[workspace.package]
version = "0.0.1"
edition = "2021"

[workspace.dependencies]
# axum
async-std = "1.13.0"
tokio = { version = "1.39.2", features = ["full"] }
axum = {version = "0.7.5", features = ["multipart", "macros"] }
tower-http = { version = "0.6.0", features = ["cors"] }
utoipa = { version = "4.1.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
# .env
dotenvy = "0.15.7"
once_cell = "1.19.0"
# seaorm
migration = { path = "migration" }
entity = { path = "entity" }
sea-orm = { version = "1.0.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
chrono = "0.4.39"
# meilisearch
meilisearch-sdk = "0.28.0"
#neo4j
neo4rs = "0.8.0"
# cloudflare r2
cf-r2-sdk = "3.1.3"
# auth0
jwtk = "0.4.0"
# discord webhook
reqwest = { version = "0.12.14", features = ["json"] }
# error
thiserror = "2.0.11"
# util
radix_fmt = "1.0.0"
# logging
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
# image
image = "0.25.2"
webp = "0.3.0"
# parse
csv = "1.3.1"
serde = { version="1.0.209", features=["derive"] }
serde_json = "1.0.127"
serde_derive = "1.0.219"
regex = "1.11.1"
