[package]
name = "entity"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/mod.rs"

[dependencies.sea-orm]
version = "1.1.7"
features = [ "macros" ]

[dependencies]
serde = { version="1.0.209", features=["derive"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "yaml"] }
