[package]
name = "presentation"
version.workspace = true
edition.workspace = true

[dependencies]
# DDD
application = { path = "../application" }
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
# axum
async-std.workspace = true
axum.workspace = true
tower-http.workspace = true
tokio.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
# seaorm
entity.workspace = true
# logging
tracing.workspace = true
tracing-subscriber.workspace = true
# error
thiserror.workspace = true
